# NeoEditor

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  .vimrc  CMakeLists.txt  CMakeLists.txt.user.89cfaf2  CONTRIBUTORS  CREDITS  INSTALL  NOTICES  PKGBUILD  README  README.md  build-appimage.sh  gallium-hud.sh  generate-package.sh  setup-remotes.sh
Additional/OpenGLES/: CMakeLists.txt
Additional/iOS/: CMakeLists.txt  main.mm
Additional/iOS/Classes/: EAGLView.h  EAGLView.mm  ES1Renderer.h  ES1Renderer.mm  ES2Renderer.h  ES2Renderer.mm  ESRenderer.h  exampleAppDelegate.h  exampleAppDelegate.m  exampleViewController.h  exampleViewController.m
Data/: CMakeLists.txt  banner.xcf  maratis-editor-fltk.desktop  maratis-editor.desktop  neo-editor.desktop  neo-icon.xcf  neo-project-manager.desktop  neo-store.desktop  new-icon.xcf
Data/Editor/font/: default.tga
Data/Editor/gui/: CMakeLists.txt  buttonEntity.tga  buttonSup.tga  buttonText.tga  dark-grey.theme  default.theme  grey.theme  slideTimeline.tga  timeLeftEdit.tga  winEdit.tga  winTime.tga
Data/NeoStore/repository/: repo.txt
Documentation/: Api.lua  CMakeLists.txt  Developer.in  Lua.in  SDK.in  maratis.css  style.css
Documentation/Engine/: ManagingProjects.md  TestCoverage.dox
Documentation/Engine/EditorAddons/: EditorAddonCreation.dox  EditorAddonSystem.dox  EditorAddons.dox
Documentation/Engine/ManagingProjects/: ManagingProjects.dox  ProjectCreation.dox
Documentation/Engine/ProjectStructure/: ImportingAssets.dox  ProjectStructure.dox
Documentation/LuaDocs/: Animation.lua  Camera.lua  General.lua  Input.lua  Level.lua  Lights.lua  LuaApi.lua  Objects.lua  Physics.lua  Sounds.lua  System.lua  Texts.lua  Transformation.lua
Documentation/SDK/: index.md
Emscripten/: CMakeLists.txt  Command.txt  LoadPlugins.cpp
MSDK/MCore/: CMakeLists.txt
MSDK/MCore/Includes/: MCore.h  MDataManager.h  MFile.h  MFileTools.h  MImage.h  MMaths.h  MRenderingContext.h  MScriptContext.h  MStringTools.h  MThread.h  MUtils.h
MSDK/MCore/Sources/: MDataLoader.cpp  MDataManager.cpp  MFileTools.cpp  MImage.cpp  MMaths.cpp  MMatrix4x4.cpp  MSound.cpp  MStringTools.cpp  MThread.cpp
MSDK/MEngine/: CMakeLists.txt
MSDK/MEngine/Includes/: MArmatureAnimRef.h  MBehavior.h  MEngine.h  MFontRef.h  MFrustum.h  MLevel.h  MLog.h  MMaterialsAnimRef.h  MMesh.h  MMeshRef.h  MMeshTools.h  MMorphingData.h  MOCamera.h  MOEntity.h  MOLight.h  MObject3d.h  MPackageManager.h  MPostProcessor.h  MScene.h  MShaderRef.h  MSkybox.h  MSoundRef.h  MTextureRef.h  MTexturesAnimRef.h  MVariable.h
MSDK/MEngine/Sources/: MArmatureAnimRef.cpp  MBox3d.cpp  MEngine.cpp  MFont.cpp  MFontRef.cpp  MFrustum.cpp  MGame.cpp  MLevel.cpp  MLog.cpp  MMaterialsAnimRef.cpp  MMesh.cpp  MMeshRef.cpp  MMeshTools.cpp  MMorphingData.cpp  MOCamera.cpp  MOEntity.cpp  MOLight.cpp  MOSound.cpp  MOText.cpp  MObject3d.cpp  MPostProcessor.cpp  MScene.cpp  MShaderRef.cpp  MSkybox.cpp  MSoundRef.cpp  MTextureRef.cpp  MTexturesAnimRef.cpp
MSDK/MGui/: CMakeLists.txt
MSDK/MGui/Includes/: MAndroidWindow.h  MGui.h  MGui2d.h  MGuiButton.h  MGuiEditText.h  MGuiEvents.h  MGuiFileBrowser.h  MGuiImage.h  MGuiMenu.h  MGuiSlide.h  MGuiText.h  MGuiTextureFont.h  MGuiWindow.h  (+4 more)
Maratis/: CMakeLists.txt
Maratis/AndroidPlayer/: MAndroidPlayer.cpp
Maratis/Common/: CMakeLists.txt  MGameWinEvents.h
Maratis/CrashHandler/: CMakeLists.txt  CrashHandler.cxx  CrashHandler.fl  CrashHandler.h  main.cpp
Maratis/Editor/: CMakeLists.txt  main.cpp
Maratis/EditorFLTK/: CMakeLists.txt  main.cpp  maratis_log.txt
Maratis/EmscriptenPlayer/: CMakeLists.txt  main.cpp
Maratis/NeoEditor/: CMakeLists.txt  icon.rc  main.cpp
Maratis/Player/: CMakeLists.txt  main.cpp
Neo/: CMakeLists.txt
Neo/AndroidPlayer/: CMakeLists.txt  MAndroidPlayer.cpp
Neo/Common/: CMakeLists.txt  GameWinEvents.h  MGameWinEvents.h  standard.frag  standard.vert
Neo/CrashHandler/: CMakeLists.txt
Neo/Editor/: CMakeLists.txt  translations.txt
Neo/EmscriptenPlayer/: main.cpp
Neo/Gui/: CMakeLists.txt  NeoGui.i  NeoGui_wrap.cxx
Neo/LuaCommonDlg/: CMakeLists.txt  main.c  opendlg-gtk.c  opendlg-gtk.h  opendlg-nfd.c  opendlg-qt.cpp  opendlg-qt.h  opendlg-win32.c  opendlg-win32.h
Neo/NeoEditor/: .clang-format  CMakeLists.txt  main.cpp  translations.txt
Neo/Player/: CMakeLists.txt  main.cpp
Neo/Playerv2/: CMakeLists.txt
Neo/Plugins/: CMakeLists.txt
Neo/ProjectManager/: CMakeLists.txt
Neo/libproject/: CMakeLists.txt  Project.cpp  Project.h
SDK/LuaApi/: BatchSprite.lua  Button.lua  CMakeLists.txt  Camera.lua  Canvas.lua  Collision.lua  Graphics2D.lua  InputField.lua  Label.lua  Neo3D.lua  OCamera.lua  OEntity.lua  OLight.lua  OSound.lua  Object3d.lua  Quad.lua  QuadTree.lua  Shapes.lua  Sprite.lua  SpriteAnimation.lua  SpriteBatch.lua  SpriteSheet.lua  ThemedButton.lua  Tile.lua  Tiled.lua  Utils.lua  Vector2.lua  Widget.lua  class.lua
SDK/MEngine/: CMakeLists.txt
Swig/: CMakeLists.txt  Neo.i  NeoLua.i  NeoLua_wrap.cxx  NeoSharp.i  NeoSharp_wrap.cxx  Neo_wrap.cxx  Object3dCasting.h  TinyXmlLua.i  TinyXmlLua_wrap.cxx
Swig/NeoSharp/: MonoContext.cpp  MonoContext.h  MonoSubgame.cpp  Plugin.cpp
Tools/: CMakeLists.txt
Tools/CrashHandler/: CMakeLists.txt  CrashHandler.cxx  CrashHandler.fl  CrashHandler.h  main.cpp
Tools/MonDoc/: CMakeLists.txt  README.md  highlight.pack.js  searchprovider.js  style.css
Tools/NeoStore/: CMakeLists.txt  Downloader.cpp  Downloader.h  HappyHTTP.cpp  HappyHTTP.h  NeoStore.cxx  NeoStore.fl  NeoStore.h  Repository.cpp  Repository.h  RepositoryManager.cpp  RepositoryManager.h  ini.h  main.cpp
Tools/ProfileViewer/: CMakeLists.txt  MainWindow.cxx  MainWindow.fl  MainWindow.h  Table.cpp  Table.h  main.cpp
Tools/ProjectManager/: CMakeLists.txt  MainWindow.cxx  MainWindow.fl  MainWindow.h  MainWindowCallbacks.cpp  main.cpp
Tools/ProjectWizard/: CMakeLists.txt  MainWindow.cxx  MainWindow.fl  MainWindow.h  MainWindowCallbacks.cpp  main.cpp
Tools/Publisher/: CMakeLists.txt  main.cpp
Tools/docl/: LICENSE.txt  contributors.txt  default.css  doc.lua  docl  style.css
(+1358 files in other folders)
